--- a/css/main.css
+++ b/css/main.css
@@ -479,38 +479,144 @@ nav .menu-cont a {
 .features {
   padding: var(--main-padding-bottom) 0;
   background-color: white;
-  position: relative;
   .container {
     display: grid;
-    gap: 30px;
-    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     .box {
-      --box-color:rgb(244 64 54);
-      border: #ccc solid 1px;
+      &.quality {
+        --box-color: rgb(244 64 54);
+        --alt-box-color: rgb(244 64 54 / 60%);
+      }
+      &.time {
+        --box-color: #009688;
+        --alt-box-color: rgb(0 150 136 / 60%);
+      }
+      &.passion {
+        --box-color: #03a9f4;
+        --alt-box-color: rgb(3 169 244 / 60%);
+      }
       text-align: center;
+      border: #ccc solid 1px;
+      &:hover {
+        a {
+          color: white;
+          background-position: left;
+        }
+        .image::after {
+          border-width: 170px 500px 170px 0;
+        }
+      }
       .image {
         overflow: hidden;
         position: relative;
+
+        &::before {
+          content: "";
+          width: 100%;
+          height: 100%;
+          background-color: var(--alt-box-color);
+          position: absolute;
+          z-index: 2;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          z-index: 3;
+          border-style: solid;
+          border-color: transparent transparent white transparent;
+          border-width: 0px 0px 170px 500px;
+          transition: var(--main-transition);
+        }
         img {
-        max-width: 100%;
+          max-width: 100%;
         }
       }
       h2 {
         font-size: 40px;
         width: fit-content;
         position: relative;
-        margin: auto;
+        margin: 0 auto 30px;
+        text-transform: capitalize;
         &::before {
-          content: '';
+          content: "";
           position: absolute;
           width: 75%;
           height: 5px;
-          bottom: -10px;
+          bottom: -20px;
           left: 10%;
           background-color: var(--box-color);
         }
+      }
+      p {
+        padding: 20px;
+        color: #777;
+        margin: 30px 0;
+        font-size: 20px;
+        line-height: 2;
+      }
+      a {
+        display: block;
+        margin: 0 auto 30px;
+        text-decoration: none;
+        color: var(--box-color);
+        font-size: 22px;
+        border: solid 3px var(--box-color);
+        border-radius: 6px;
+        width: fit-content;
+        padding: 10px 30px;
+        font-weight: bold;
+        position: relative;
+        transition: var(--main-transition);
+        background: linear-gradient(to right, var(--box-color) 50%, white 50%);
+        background-size: 200%;
+        background-position: right;
       }
     }
   }
 }
 /* End Features */
+/* Start Testimonials */
+.testimonials {
+  padding: var(--main-padding-bottom) 0;
+  background-color: var(--section-background);
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 40px;
+    .box {
+      position: relative;
+      background-color: white;
+      border-radius: 6px;
+      padding: 20px;
+      box-shadow: 0 2px 4px rgb(0 0 0 / 7%);
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      img {
+        position: absolute;
+        right: -10px;
+        top: -25%;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border: 10px solid var(--section-background);
+      }
+      >span {
+        color: #777;
+      }
+      .rate {
+        .filled {
+          color: #ffc107;
+        }
+      }
+      p {
+        color: #777;
+        line-height: 1.5;
+      }
+    }
+  }
+}
+/* End Testimonials */
