--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ ul {
   transition: var(--main-transition);
   position: relative;
   text-transform: uppercase;
-  z-index: 1;
+  z-index: 100;
   &:hover {
     color: white;
     transition-delay: 0.5s;
@@ -106,7 +106,7 @@ ul {
   }
   100% {
     left: 0;
-    width: 50%;
+    width: calc(50% + 2px);
     height: 100%;
     border-radius: 0;
   }
@@ -117,7 +117,7 @@ ul {
   }
   100% {
     right: 0;
-    width: 50%;
+    width: calc(50% + 2px);
     height: 100%;
     border-radius: 0;
   }
@@ -584,7 +584,7 @@ nav .menu-cont a {
   background-color: var(--section-background);
   .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 40px;
     .box {
       position: relative;
@@ -604,7 +604,7 @@ nav .menu-cont a {
         border-radius: 50%;
         border: 10px solid var(--section-background);
       }
-      >span {
+      > span {
         color: #777;
       }
       .rate {
@@ -620,3 +620,152 @@ nav .menu-cont a {
   }
 }
 /* End Testimonials */
+/* Start team Memper */
+.team {
+  padding: var(--main-padding-top) 0;
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 30px;
+    .box {
+      position: relative;
+      padding-top: 60px;
+      transition: var(--main-transition);
+      &::before {
+        content: "";
+        background-color: #f3f3f3;
+        width: calc(100% - 60px);
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 100%;
+        z-index: -2;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        background-color: #e4e4e4;
+        height: 100%;
+        right: 0;
+        top: 0;
+        z-index: -1;
+        transition: var(--main-transition);
+        width: 0;
+      }
+      &:hover::after {
+        width: calc(100% - 60px);
+      }
+      * {
+        transition: var(--main-transition);
+      }
+      &:hover img,
+      &:hover .info {
+        filter: grayscale(100);
+      }
+      .data {
+        display: flex;
+        align-items: center;
+        img {
+          width: calc(100% - 60px);
+          border-radius: 10px;
+        }
+        .social {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          a {
+            width: 60px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            i {
+              color: #777;
+              &:hover {
+                color: #2196f3;
+              }
+            }
+          }
+        }
+      }
+      .info {
+        padding: 20px 80px;
+        h3 {
+          color: var(--main-color);
+          margin-bottom: 10px;
+          font-size: 22px;
+        }
+      }
+    }
+  }
+}
+/* End team Memper */
+/* Start Services */
+.services {
+  background-color: var(--section-background);
+  padding: var(--main-padding-bottom) 0;
+  position: relative;
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+    .box {
+      background-color: white;
+      position: relative;
+      box-shadow: 0 12px 20px rgb(0 0 0 / 13%), 0 2px 4px rgb(0 0 0 /12%);
+      transition: var(--main-transition);
+      counter-increment: services;
+      i {
+        color: #d5d5d5;
+        text-align: center;
+        display: block;
+        margin: 40px 0 20px;
+      }
+      h3 {
+        text-align: center;
+        font-size: 25px;
+        color: var(--main-color);
+        margin-bottom: 40px;
+      }
+      .info {
+        position: relative;
+        background-color: #f9f9f9;
+        text-align: right;
+        padding: 15px;
+        &::before {
+          content: "0" counter(services);
+          position: absolute;
+          height: 100%;
+          width: 80px;
+          left: 0;
+          text-align: initial;
+          color: white;
+          background-color: var(--main-color);
+          top: 0;
+          font-size: 30px;
+          font-weight: bold;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding-right: 15px;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          background-color: #d5d5d5;
+          top: 0;
+          left: 80px;
+          width: 50px;
+          height: calc(100% + 0.4px);
+          transform: skewX(-30deg);
+        }
+        a {
+          color: var(--main-color);
+          text-decoration: none;
+        }
+      }
+    }
+  }
+}
+/* End Services */
