--- a/css/main.css
+++ b/css/main.css
@@ -211,12 +211,6 @@ nav ul > li > a:hover::before {
   }
 }
 
-nav > ul > li:last-child a:hover + .menu-cont {
-  z-index: 1;
-  opacity: 1;
-  top: calc(100% + 1px);
-}
-
 .menu-cont {
   background-color: white;
   z-index: -1;
@@ -331,7 +325,7 @@ nav .menu-cont a {
       animation: bouncing 1.5s infinite;
     }
   }
-  @media (max-width: 991px) {
+  @media (max-width: 992px) {
     .container {
       .text {
         text-align: center !important;
@@ -716,6 +710,23 @@ nav .menu-cont a {
       box-shadow: 0 12px 20px rgb(0 0 0 / 13%), 0 2px 4px rgb(0 0 0 /12%);
       transition: var(--main-transition);
       counter-increment: services;
+      &::before {
+        content: "";
+        position: absolute;
+        top: -3px;
+        left: 50%;
+        translate: -50% 0;
+        background-color: var(--main-color);
+        transition: var(--main-transition);
+        height: 3px;
+        width: 0%;
+      }
+      &:hover {
+        translate: 0 -10px;
+        &::before {
+          width: 100%;
+        }
+      }
       i {
         color: #d5d5d5;
         text-align: center;
@@ -769,3 +780,120 @@ nav .menu-cont a {
   }
 }
 /* End Services */
+/* Start Skills */
+.our-skills {
+  padding: var(--main-padding-bottom) 0;
+  position: relative;
+  background-color: white;
+  .container {
+    display: flex;
+    align-items: center;
+    @media (max-width: 991px) {
+      img {
+        display: none;
+      }
+    }
+    .skills {
+      flex: 1;
+      .skill {
+        h3 {
+          display: flex;
+          justify-content: space-between;
+          margin: 19px 0;
+          span {
+            padding: 3px 5px;
+            border: 1px solid #777;
+            border-radius: 4px;
+            color: var(--main-color);
+            font-size: 12px;
+          }
+        }
+        .the-progress {
+          background-color: #eee;
+          height: 30px;
+          position: relative;
+          span {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            background-color: var(--main-color);
+            transition: width 0.5s linear;
+          }
+        }
+      }
+    }
+  }
+}
+/* End Skills */
+/* Start Work Steps */
+.work-steps {
+  padding: var(--main-padding-bottom) 0;
+  position: relative;
+  background-color: var(--section-background);
+  .container {
+    display: flex;
+    align-items: center;
+    > * {
+      flex: 1;
+    }
+    > img {
+      max-width: 100%;
+      margin-right: 100px;
+    }
+    .info {
+      .box {
+        display: flex;
+        margin-bottom: 20px;
+        align-items: center;
+        border: 2px solid white;
+        padding: 30px;
+        border-radius: 6px;
+        background-color: #f6f5f5;
+        position: relative;
+        z-index: 1;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 0;
+          height: 0;
+          transition: 0.3s;
+          translate: -50% -50%;
+          background-color: #ededed;
+          z-index: -1;
+        }
+        &:hover::before {
+          width: 100%;
+          height: 100%;
+        }
+        img {
+          width: 64px;
+          height: 64px;
+          margin-right: 30px;
+        }
+        .text {
+          h3 {
+            font-size: 22px;
+          }
+          p {
+            color: #777;
+            line-height: 1.7;
+            margin-top: 10px;
+            font-size: 18px;
+          }
+        }
+      }
+    }
+    @media (max-width: 991px) {
+      & {
+        flex-direction: column;
+      }
+      >img {
+        margin: 0 0 50px;
+      }
+    }
+  }
+}
+/* End Work Steps */
