--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,22 @@ ul {
     border-radius: 0;
   }
 }
+
+.dots {
+  position: absolute;
+  background: url(https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/dots.png)
+    no-repeat;
+  width: 186px;
+  height: 204px;
+}
+.dots-up {
+  top: 200px;
+  right: 0;
+}
+.dots-down {
+  bottom: 200px;
+  left: 0;
+}
 /* End Global Ruls */
 /* Start Header */
 
@@ -890,10 +906,230 @@ nav .menu-cont a {
       & {
         flex-direction: column;
       }
-      >img {
+      > img {
         margin: 0 0 50px;
       }
     }
   }
 }
 /* End Work Steps */
+/* Start Event */
+.event {
+  padding: var(--main-padding-bottom) 0;
+  background-color: white;
+  position: relative;
+  .container {
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    > img {
+      max-width: 450px;
+    }
+    .info {
+      flex: 1;
+      .time {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        .unit {
+          width: 75px;
+          border: solid 1px #d4d4d4;
+          text-align: center;
+          border-radius: 6px;
+          transition: var(--main-transition);
+          span {
+            display: block;
+            transition: var(--main-transition);
+          }
+          span:first-child {
+            font-size: 35px;
+            color: var(--main-color);
+            font-weight: bold;
+            padding: 15px;
+          }
+          span:last-child {
+            padding: 8px 10px;
+            font-size: 13px;
+            border-top: 1px solid #d4d4d4;
+            width: 100%;
+          }
+        }
+      }
+      .title {
+        text-align: center;
+        margin-top: 40px;
+        font-size: 30px;
+      }
+      .discription {
+        font-size: 19px;
+        text-align: center;
+        color: #777;
+        line-height: 1.7;
+        margin: 19px 0;
+      }
+    }
+    .subscribe {
+      width: 100%;
+      margin-top: 50px;
+      form {
+        width: 600px;
+        margin: 20px auto;
+        background-color: #f6f5f5;
+        border-radius: 50px;
+        padding: 30px 40px;
+        display: flex;
+        gap: 10px;
+        input[type="email"] {
+          border-radius: 50px;
+          border: none;
+          padding: 20px;
+          flex: 1;
+          caret-color: var(--main-color);
+          transition: var(--main-transition);
+          &:focus {
+            outline: none;
+            &::placeholder {
+              color: transparent;
+            }
+          }
+          &::placeholder {
+            color: #777;
+            transition: var(--main-transition);
+          }
+        }
+        input[type="submit"] {
+          border-radius: 50px;
+          background-color: var(--main-color);
+          color: white;
+          border: none;
+          padding: 20px;
+          font-weight: bold;
+          transition: var(--main-transition);
+          cursor: pointer;
+          &:hover {
+            background-color: var(--main-color-alt);
+          }
+        }
+      }
+    }
+  }
+}
+/* End Event */
+/* Start Pricing */
+.pricing {
+  padding: var(--main-padding-bottom) 0;
+  background-color: var(--section-background);
+  position: relative;
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 30px;
+    z-index: 1;
+    .box {
+      background-color: white;
+      text-align: center;
+      position: relative;
+      box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+      transition: var(--main-transition);
+      &.popular {
+        translate: 0 -20px;
+        .label {
+          color: white;
+          background-color: var(--main-color);
+          width: 40px;
+          padding: 10px 10px 35px;
+          position: absolute;
+          writing-mode: vertical-rl;
+          right: 20px;
+          font-weight: bold;
+          font-size: 18px;
+          &::before {
+            content: "";
+            border: solid 20px;
+            border-color: transparent transparent white;
+            position: absolute;
+            bottom: 0;
+            right: 0px;
+          }
+        }
+      }
+      &::before,&::after {
+        content: "";
+        position: absolute;
+        height: 50%;
+        width: 0;
+        z-index: -1;
+        background-color: #f6f6f6;
+        transition: var(--main-transition);
+      }
+      &::before {
+        top: 0;
+        left: 0;
+      }
+      &::after {
+        bottom: 0;
+        right: 0;
+      }
+      &:hover::before,
+      &:hover::after {
+        width: 100%;
+      }
+      h3 {
+        margin: 30px 0;
+        font-size: 25px;
+        letter-spacing: -1px;
+      }
+      img {
+        width: 80px;
+        margin-bottom: 30px;
+      }
+      .price {
+        margin-bottom: 20px;
+        span:first-child {
+          display: block;
+          color: var(--main-color);
+          font-size: 60px;
+          font-weight: bold;
+          margin-bottom: 5px;
+        }
+        span:last-child {
+          color: #777;
+        }
+      }
+      ul {
+        li {
+          text-align: left;
+          padding: 20px;
+          border-top: 1px solid #eee;
+          &::before {
+            content: "\f00c";
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            color: var(--main-color);
+            margin-right: 10px;
+          }
+        }
+      }
+      a {
+        margin: 30px auto 40px;
+        display: block;
+        width: fit-content;
+        text-decoration: none;
+        color: var(--main-color);
+        border: solid 2px var(--main-color);
+        padding: 15px 20px;
+        border-radius: 6px;
+        font-weight: bold;
+        transition: var(--main-transition);
+        &:hover {
+          background-color: var(--main-color-alt);
+          border-color: var(--main-color-alt);
+          color: white;
+        }
+      }
+    }
+  }
+}
+/* End Pricing */
