--- a/css/main.css
+++ b/css/main.css
@@ -1031,7 +1031,7 @@ nav .menu-cont a {
       background-color: white;
       text-align: center;
       position: relative;
-      box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%  );
+      box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
       transition: var(--main-transition);
       &.popular {
         translate: 0 -20px;
@@ -1055,7 +1055,8 @@ nav .menu-cont a {
           }
         }
       }
-      &::before,&::after {
+      &::before,
+      &::after {
         content: "";
         position: absolute;
         height: 50%;
@@ -1133,3 +1134,96 @@ nav .menu-cont a {
   }
 }
 /* End Pricing */
+/* Start Footer */
+footer {
+  padding-top: 70px;
+  position: relative;
+  background-color: #191919;
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
+    .box {
+      h3 {
+        font-size: 50px;
+        color: white;
+        margin-bottom: 20px;
+      }
+      img {
+        max-width: 100%;
+        width: 72px;
+        border: white solid 2px;
+        margin: 2px;
+      }
+      >p {
+        color: #b9b9b9;
+        line-height: 2;
+        margin-top: 20px;
+      }
+      > a {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        color: #b9b9b9;
+        background-color: #313131;
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+        text-decoration: none;
+        font-size: 20px;
+      }
+      ul {
+        li {
+          counter-increment: name;
+          padding: 15px 0;
+          transition: var(--main-transition);
+          &:not(:last-child) {
+            border-bottom: solid 1px #444;
+          }
+          &:hover {
+            color: white;
+            padding-left: 10px;
+          }
+        }
+        a {
+          color: #b9b9b9;
+          text-decoration: none;
+          &::before {
+            font-family: "Font Awesome 6 Free";
+            content: "\F101";
+            font-weight: 900;
+            margin: 10px;
+            color: var(--main-color);
+          }
+          &::after {
+            content: " " counter(name);
+            position: relative;
+          }
+        }
+      }
+      >div {
+        display: flex;
+        gap: 10px;
+        color: #b9b9b9;
+        align-items: center;
+        margin-bottom: 30px;
+        i{
+          color: var(--main-color);
+          font-size: 25px;
+        }
+        p {
+          flex: 1;
+          line-height: 1.7;
+        }
+      }
+    }
+  } 
+  p.copyright {
+    color: white;
+    text-align: center;
+    border-top: 1px solid #444;
+    padding: 25px 0;
+    margin-top: 50px;
+  }
+}
+/* End Footer */
